--- a/src/styles/Home.css
+++ b/src/styles/Home.css
@@ -1,17 +1,24 @@
 #bg1 {
-  margin: auto;
-  width: 99.99%;
+  width: 97%;
   height: 630px;
-  background-image: url("../Components/BGimage.png");
+  background-image: url("../Images/BGimage.png");
   background-position: center;
   background-size: cover;
 }
+#c1{
+  display: flex;
+}
 #bg2 {
     margin: auto;
-  background-image: url("../Components/BGimage2.png");
+  background-image: url("../Images/BGimage2.png");
   height: 40vh;
   width: 99.99%;
   background-position: center;
   background-repeat: no-repeat;
   background-size: cover;
+}
+#spacer{
+  background-color:#FFDD33 ;
+  /* background-color: red ; */
+  
 }
